Fixes, Changes and Removals
- Removal of Apache Kafka dependency
- Unit testing for services and repository
- Removal of Mail services
- Changed Ids from String to ObjectId